helm/traefik/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-middleware
  namespace: msa
spec:
  forwardAuth:
    address: http://auth-server.msa.svc.cluster.local:3000/api/v1/auth/validate-token
    trustForwardHeader: true
    authResponseHeaders:
      - X-User-Id
      - X-Internal
      - X-Authenticated
