helm/traefik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  namespace: msa
spec:
  entryPoints:
    - web
  routes:
  - match: PathPrefix(`/api/v1/users`)
    kind: Rule
    services:
      - name: user-server
        port: 3000
    middlewares:
      - name: auth-middleware

  - match: PathPrefix(`/api/v1/auth`)
    kind: Rule
    services:
      - name: auth-server
        port: 3000
        namespace: msa

  - match: PathPrefix(`/api/v1/friends`)
    kind: Rule
    services:
      - name: user-server
        port: 3000
    middlewares:
      - name: auth-middleware
